clusters/cl01tl/manifests/openbao/HTTPRoute-openbao.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
  namespace: openbao
  labels:
    helm.sh/chart: openbao-0.30.3
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/managed-by: Helm
spec:
  hostnames:
    - "bao.alexlebens.dev"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - kind: Service
          name: openbao-active
          port: 8200
      matches:
        - path:
            type: PathPrefix
            value: /
